<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.guvnor.sramp</groupId>
	<artifactId>s-ramp-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>S-RAMP Common Parent</name>

	<url>http://www.jboss.org/guvnor/sramp.html</url>
	<packaging>pom</packaging>
	<description>S-RAMP is a SOA Repository Artifact Model and Protocol (S-RAMP) implementation.</description>
	<inceptionYear>2011</inceptionYear>

	<organization>
		<name>JBoss, a division of Red Hat</name>
		<url>http://www.jboss.org</url>
	</organization>

	<licenses>
		<license>
			<name>Apache License Version 2.0</name>
			<url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
			<!--url>http://www.gnu.org/licenses/lgpl.html</url -->
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git://github.com/Governance/s-ramp.git</connection>
		<developerConnection>scm:git:git@github.com:Governance/s-ramp.git</developerConnection>
		<url>http://github.com/Governance/s-ramp</url>
	</scm>

	<issueManagement>
		<system>jira</system>
		<url>http://issues.jboss.org/browse/SRAMP</url>
	</issueManagement>

	<developers>
		<developer>
			<name>Kurt Stam</name>
			<id>kstam</id>
			<email>kstam@jboss.com</email>
			<organization>JBoss, a division of Red Hat</organization>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Randall Hauch</name>
			<id>randall</id>
			<email>rhauch@redhat.com</email>
			<organization>JBoss, a division of Red Hat</organization>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>

	<properties>

		<!-- Instruct the build to use only UTF-8 encoding for source code -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>4.8.2</junit.version>
		<log4j.version>1.2.16</log4j.version>
		<slf4j.api.version>1.5.11</slf4j.api.version>
		<slf4j.log4j.version>1.5.11</slf4j.log4j.version>
		<xmlunit.version>1.3</xmlunit.version>
		<!-- Maven plugin versions -->
		<maven.surefire.report.plugin.version>2.4.3</maven.surefire.report.plugin.version>
		<maven.surefire.plugin.version>2.7.1</maven.surefire.plugin.version>
		<maven.assembly.plugin.version>2.2</maven.assembly.plugin.version>
		<maven.install.plugin.version>2.3.1</maven.install.plugin.version>
		<maven.javadoc.plugin.version>2.7</maven.javadoc.plugin.version>
		<maven.jxr.plugin.version>2.1</maven.jxr.plugin.version>
		<maven.jar.plugin.version>2.3.1</maven.jar.plugin.version>
		<maven.war.plugin.version>2.1.1</maven.war.plugin.version>
		<maven.bundle.plugin.version>2.1.0</maven.bundle.plugin.version>
		<maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
		<maven.source.plugin.version>2.1.2</maven.source.plugin.version>
		<maven.deploy.plugin.version>2.5</maven.deploy.plugin.version>
    <!-- from other modules -->
    <org.jboss.resteasy.version>3.0-alpha-1-SNAPSHOT</org.jboss.resteasy.version>
    <org.modeshape.version>2.5.0.Final</org.modeshape.version>
	</properties>

	<build>
		<!-- This section defines the default plugin settings inherited by child 
			projects. -->
		<pluginManagement>
			<plugins>
				<!-- Fixes how test resources of a project can be used in projects dependent 
					on it -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven.assembly.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>${maven.bundle.plugin.version}</version>
					<extensions>true</extensions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<!-- Specify the compiler options and settings -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<showDeprecation>false</showDeprecation>
					<showWarnings>false</showWarnings>
				</configuration>
			</plugin>
			<!-- Produce source jars during the 'verify' phase -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven.source.plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<includes>
						<include>**/*TestCase.java</include>
						<include>**/*Test.java</include>
					</includes>
					<argLine>-Xmx256M -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
			<!-- Build a test-jar for each project, so that src/test/* resources and 
				classes can be used in other projects. Also customize how the jar files are 
				assembled. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.plugin.version}</version>
				<executions>
					<execution>
						<id>test-jar</id>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Implementation-URL>${project.url}</Implementation-URL>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencyManagement>
		<dependencies>
			<!-- Logging (require SLF4J API for compiling, but use Log4J and its SLF4J 
				binding for testing) -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.api.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.log4j.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- Testing (note the scope) -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>xmlunit</groupId>
				<artifactId>xmlunit</artifactId>
				<version>${xmlunit.version}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>${maven.surefire.report.plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>

	<repositories>
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Repository Group</name>
			<url>http://repository.jboss.org/nexus/content/groups/developer/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
	</repositories>


	<pluginRepositories>
		<pluginRepository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Repository Group</name>
			<url>http://repository.jboss.org/nexus/content/groups/developer/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<distributionManagement>
		<repository>
			<id>jboss-releases-repository</id>
			<name>JBoss Releases Repository</name>
			<url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

</project>
